Fixed badge vertical alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -82,6 +82,7 @@
 /* Bootstrap Overrides */
 
 .badge {
+  margin-top: 6px;
   background-color: #415b76;
 }
 
